several bugs/problems found with static code analysis: * avoid boxing and unboxing for primitive coercion * use Arrays.toString() on arrays instead of Object.toString() * use static valueOf() method for numbers instead of constructor * don't concatenate Strings in a loop * no-op casting (int-float-int) * infinite recursive loop * nullpointer dereferences